--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -1,4 +1,3 @@
-<!-- fragment_report.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -42,10 +41,11 @@
             android:layout_marginStart="8dp" />
     </LinearLayout>
 
-    <!-- Embedded WebView for map -->
-    <WebView
-        android:id="@+id/map_webview"
+    <!-- SupportMapFragment for interactive map -->
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_height="match_parent"/>
+
 </LinearLayout>
